@@ -1,3 +1,3 @@
-EBUILD xbmc-9999.ebuild 5170 RMD160 b6a9fd90e71f689fe6b31e4702fa4e9974efc58d SHA1 b9f2655ae38f718c77e9de0951b0389681799760 SHA256 b210757894cfd3bdb361d4ee630c7fef0a645664de740b78c258e7341e544ec5
-MISC ChangeLog 653 RMD160 f7040def893f7a1a267b401cf3109a0bcab69808 SHA1 23e52c93536638b713a46c46342d42686f0485b4 SHA256 acccaa869aafb9c587b529b715f1c82ee979c6d2f79f2e25ea9e49b46d76c40f
+EBUILD xbmc-9999.ebuild 5365 RMD160 0f7b747de7452f228e16b0cd78f8215ab888e886 SHA1 f130349e48a12ee8235292c7f7d758ea9458618e SHA256 357aa18439b044e288ee469c540b95d3d81e886ade935f5c58e6b11c3334509d
+MISC ChangeLog 798 RMD160 d1909959411844d3b3f41e691464a853e2f716f4 SHA1 a637a37b95f4dffb5c875db20170f57c4a100a80 SHA256 e7cc52e6016e0c6000227ce5f9afbdaa585cda12cf786c030b170cbfcb5bea28
 MISC metadata.xml 428 RMD160 7c574612c36f23ada4d514ab510f11d66ef145f2 SHA1 f51abb54b6b55ae40a4c65793ef10b701241f6ec SHA256 9f60b4f4bf1e21a7476ab24207acf258be27a7502a9bc7490eefb8f897884c06
